# cubes

./: CMakeLists.txt  README.md
examples/: game0  game1  game2  game3  game4  game5  game6  game7  game8
src/: arrows.cpp  arrows.h  board.cpp  board.h  main.cpp  mathematics.cpp  mathematics.h  move.cpp  move.h  vec.cpp  vec.h
